@startuml INFOTEC Modelos Laravel
!define ENTITY class
!define PRIMARY_KEY <b><color:red>
!define FOREIGN_KEY <b><color:blue>
!define UNIQUE <b><color:green>
!define INDEX <b><color:orange>
!define TEXT <color:purple>

title INFOTEC - Modelos Laravel y Esquema de Base de Datos

' ============================================================================
' ENTIDADES / MODELOS
' ============================================================================

ENTITY Evento {
    PRIMARY_KEY id : bigint(20) sin signo
    INDEX titulo : varchar(255)
    TEXT descripcion : texto
    INDEX fecha_inicio : fecha
    INDEX fecha_fin : fecha
    ubicacion : varchar(255)
    --
    created_at : timestamp
    updated_at : timestamp
    --
    <color:green>Índices:</color>
    • titulo_index
    • fecha_inicio_index  
    • fecha_fin_index
    • (fecha_inicio, fecha_fin)_compuesto
    --
    <color:blue>Relaciones:</color>
    + asistentes() : tieneVarios
    + ponentes() : perteneceAVarios
}

ENTITY Ponente {
    PRIMARY_KEY id : bigint(20) sin signo
    nombre : varchar(255)
    TEXT biografia : texto
    especialidad : varchar(255)
    --
    created_at : timestamp
    updated_at : timestamp
    --
    <color:blue>Relaciones:</color>
    + eventos() : perteneceAVarios
}

ENTITY Asistente {
    PRIMARY_KEY id : bigint(20) sin signo
    nombre : varchar(255)
    UNIQUE email : varchar(255)
    telefono : varchar(255)
    FOREIGN_KEY evento_id : bigint(20) sin signo
    --
    created_at : timestamp
    updated_at : timestamp
    --
    <color:green>Restricciones:</color>
    • ÚNICO (email, evento_id)
    • CF evento_id → eventos.id CASCADA
    • ÍNDICE evento_id
    --
    <color:blue>Relaciones:</color>
    + evento() : perteneceA
}

ENTITY EventoPonente <<Tabla Pivote>> {
    PRIMARY_KEY id : bigint(20) sin signo
    FOREIGN_KEY evento_id : bigint(20) sin signo
    FOREIGN_KEY ponente_id : bigint(20) sin signo
    --
    created_at : timestamp
    updated_at : timestamp
    --
    <color:green>Restricciones:</color>
    • ÚNICO (evento_id, ponente_id)
    • CF evento_id → eventos.id CASCADA
    • CF ponente_id → ponentes.id CASCADA
    • ÍNDICE evento_id
    • ÍNDICE ponente_id
}

' ============================================================================
' RELACIONES
' ============================================================================

' Uno-a-Varios: Evento → Asistentes
Evento ||--o{ Asistente : "tieneVarios\n(un evento, varios asistentes)"

' Varios-a-Varios: Evento ↔ Ponentes
Evento ||--o{ EventoPonente : "evento_id"
EventoPonente }o--|| Ponente : "ponente_id"

' Líneas de Restricción de Clave Foránea
Asistente }o--|| Evento : "evento_id\n(ELIMINACIÓN EN CASCADA)"

' ============================================================================
' NOTAS E INFORMACIÓN ADICIONAL
' ============================================================================

note top of Evento : <color:red><b>Entidad Gestión de Eventos</b></color>\n• Puede tener múltiples asistentes\n• Puede tener múltiples ponentes\n• Soporta descripciones largas (TEXTO)\n• Optimizado con índices de rendimiento\n• Validación de rango de fechas en controlador

note top of Ponente : <color:red><b>Entidad Ponente/Presentador</b></color>\n• Puede participar en múltiples eventos\n• Soporta biografías largas (TEXTO)\n• Varios-a-varios con eventos

note top of Asistente : <color:red><b>Entidad Asistente al Evento</b></color>\n• Pertenece a un evento\n• El email debe ser único por evento\n• Se elimina en cascada cuando se elimina el evento

note top of EventoPonente : <color:red><b>Tabla Pivote</b></color>\n• Relación varios-a-varios\n• Previene asignaciones duplicadas\n• Eliminaciones en cascada desde ambos lados\n• Incluye timestamps

@enduml